# imec-workshop

./: rtl-debugger-0.0.0.vsix
.github/workflows/: tapeout.yaml
riscv-demo/: chipflow.toml  pyproject.toml  secrets.ps1
riscv-demo/riscv_demo/: soc.py
riscv-demo/riscv_demo/board/: doit_glasgow.py
riscv-demo/riscv_demo/ips/: uart.py
riscv-demo/riscv_demo/ips/qspi/: __init__.py  glasgow_iostream.py  glasgow_qspi.py  qspi_flash.py
riscv-demo/riscv_demo/ips/uart/: __init__.py  periph.py  phy.py
riscv-demo/riscv_demo/sim/: doit_build.py  main.cc  models.cc  models.h
riscv-demo/riscv_demo/steps/: board.py  silicon.py  sim.py
riscv-demo/riscv_demo/tools/: glasgow_load.py
riscv-demo/tests/: test_uart_periph.py
uart-demo/: .gitignore  chipflow.toml  pyproject.toml
uart-demo/tests/: test_uart.py
uart-demo/uart_demo/: ports.py  uart.py
uart-demo/uart_demo/board/: doit_glasgow.py
uart-demo/uart_demo/steps/: board.py
uart-demo/uart_demo/tools/: glasgow_load.py
