# Project metadata

[project]
name = "uart-demo"
version = "0.1.0"
description = ""

requires-python = "!=3.10.1,!=3.10.2,<4.0,>3.10.0"
dependencies = [
  "amaranth[builtin-yosys]>=0.5,<0.6",
  "chipflow-lib @ git+https://github.com/ChipFlow/chipflow-lib.git",
  "glasgow[builtin-toolchain] @ git+https://github.com/GlasgowEmbedded/glasgow#subdirectory=software",
  "pyserial",
]

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Development workflow configuration

[tool.pdm.dev-dependencies]
test = [
  "pytest>=7.2.0",
]

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
test.cmd = "pytest"
pre_install = "git config --global core.longpaths true"
